--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -112,7 +112,7 @@
 </p><p><span id="Setting_basic_preferences"></span>
 </p>
 <h3><span id="Nastaven.C3.AD_z.C3.A1kladn.C3.ADch_preferenc.C3.AD"></span><span class="mw-headline" id="Nastaven&iacute;_z&aacute;kladn&iacute;ch_preferenc&iacute;">Nastaven&iacute; z&aacute;kladn&iacute;ch preferenc&iacute;</span></h3>
-<p>After installing FreeCAD, you'll likely want to personalize it by adjusting some settings. You can find the preference settings in FreeCAD by navigating to <b>Edit &rarr; Preferences</b> in the menu. Below are a few basic settings you might consider modifying right away, but feel free to explore the various pages of preferences to tailor the software to your needs even further.
+<p>Po instalaci FreeCADu budete pravd&#283;podobn&#283; cht&iacute;t prov&eacute;st jeho p&#345;izp&#367;soben&iacute; &uacute;pravou n&#283;kter&yacute;ch nastaven&iacute;. Nastaven&iacute; p&#345;edvoleb najdete ve FreeCADu v menu <b>Upravit &rarr; P&#345;edvolby</b>. N&iacute;&#382;e uv&aacute;d&iacute;me n&#283;kolik z&aacute;kladn&iacute;ch nastaven&iacute;, kter&aacute; m&#367;&#382;ete hned upravit, ale nev&aacute;hejte prozkoumat r&#367;zn&eacute; str&aacute;nky p&#345;edvoleb, abyste software je&scaron;t&#283; v&iacute;ce p&#345;izp&#367;sobili sv&yacute;m pot&#345;eb&aacute;m.
 </p>
 <h4><span id="General_category.2C_General_tab"></span><span class="mw-headline" id="General_category,_General_tab">General category, General tab</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_GeneralGen.png&amp;filetimestamp=20240613205348&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_GeneralGen.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
@@ -164,12 +164,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020954
+Cached time: 20260112021127
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.148 seconds
 Preprocessor visited node count: 129/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -180,13 +180,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.618      1 -total
- 70.54%    5.374      1 Template:Manual:TOC
- 52.24%    3.980      1 Manual:Summary/cs
- 24.38%    1.857      2 Template:Docnav
+100.00%   16.404      1 -total
+ 65.52%   10.748      1 Template:Manual:TOC
+ 51.25%    8.407      1 Manual:Summary/cs
+ 31.10%    5.101      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020954 and revision id 1736906. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021126 and revision id 1736908. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
