--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -117,8 +117,8 @@
 </p>
 <h4><span id="Obecn.C3.A9_kategorie.2C_karta_Obecn.C3.A9"></span><span class="mw-headline" id="Obecn&eacute;_kategorie,_karta_Obecn&eacute;">Obecn&eacute; kategorie, karta Obecn&eacute;</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_GeneralGen.png&amp;filetimestamp=20240613205348&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_GeneralGen.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
-<ol><li><b>Language</b>: By default, FreeCAD will select your operating system's language, but you have the option to change it. Thanks to the dedication of many contributors, FreeCAD is available in a wide array of languages.</li>
-<li><b>Units</b>: This setting allows you to choose the default units system for your projects.</li></ol>
+<ol><li><b>Jazyk</b>: Ve v&yacute;choz&iacute;m nastaven&iacute; FreeCAD vybere jazyk va&scaron;eho opera&#269;n&iacute;ho syst&eacute;mu, ale m&aacute;te mo&#382;nost ho zm&#283;nit. D&iacute;ky nasazen&iacute; mnoha p&#345;isp&#283;vatel&#367; je FreeCAD k dispozici v &scaron;irok&eacute; &scaron;k&aacute;le jazyk&#367;.</li>
+<li><b>Jednotky</b>: Toto nastaven&iacute; v&aacute;m umo&#382;&#328;uje vybrat v&yacute;choz&iacute; syst&eacute;m jednotek pro va&scaron;e projekty.</li></ol>
 <h4><span id="General_category.2C_Document_tab"></span><span class="mw-headline" id="General_category,_Document_tab">General category, Document tab</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_GeneralDoc.png&amp;filetimestamp=20240613205238&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_GeneralDoc.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <ol><li><b>Create a new document at startup</b>: FreeCAD will automatically open a new document each time the program starts.</li>
@@ -165,12 +165,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112021157
+Cached time: 20260112021319
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.105 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 130/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -181,13 +181,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.863      1 -total
- 72.74%    8.629      1 Template:Manual:TOC
- 56.13%    6.659      1 Manual:Summary/cs
- 23.40%    2.776      2 Template:Docnav
+100.00%   15.271      1 -total
+ 74.93%   11.442      1 Template:Manual:TOC
+ 61.97%    9.464      1 Manual:Summary/cs
+ 21.37%    3.264      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021157 and revision id 1736910. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021318 and revision id 1736913. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
