--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -126,7 +126,9 @@
 <ol><li><b>Vytvo&#345;it nov&yacute; dokument p&#345;i spu&scaron;t&#283;n&iacute;</b>: FreeCAD automaticky otev&#345;e nov&yacute; dokument p&#345;i ka&#382;d&eacute;m spu&scaron;t&#283;n&iacute; programu.</li>
 <li><b>Mo&#382;nosti &uacute;lo&#382;i&scaron;t&#283;</b>: Zde nakonfigurujte nastaven&iacute;, kter&aacute; v&aacute;m pomohou obnovit pr&aacute;ci v p&#345;&iacute;pad&#283; selh&aacute;n&iacute; syst&eacute;mu.</li>
 <li>'<b>Autorstv&iacute; a licence'</b>: V t&eacute;to oblasti m&#367;&#382;ete ur&#269;it nastaven&iacute; pro nov&eacute; soubory. Pro usnadn&#283;n&iacute; sd&iacute;len&iacute; zva&#382;te pou&#382;it&iacute; liber&aacute;ln&#283;j&scaron;&iacute; licence typu copyleft, jako je Creative Commons.</li></ol>
-<h4><span id="Display_category.2C_Navigation_tab"></span><span class="mw-headline" id="Display_category,_Navigation_tab">Display category, Navigation tab</span></h4>
+<p><span id="Display_category,_Navigation_tab"></span>
+</p>
+<h4><span id="Kategorie_zobrazen.C3.AD.2C_karta_Navigace"></span><span class="mw-headline" id="Kategorie_zobrazen&iacute;,_karta_Navigace">Kategorie zobrazen&iacute;, karta Navigace</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_DisplayNav.png&amp;filetimestamp=20240613205221&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_DisplayNav.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <ol><li><b>Zoom at cursor</b>: When enabled, zoom actions center on the mouse cursor. If disabled, zoom focuses on the center of the view.</li>
 <li><b>Invert zoom</b>: This option reverses the zoom direction in relation to mouse movement.</li></ol>
@@ -167,13 +169,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112021612
+Cached time: 20260112021656
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.124 seconds
-Preprocessor visited node count: 131/1000000
+CPU time usage: 0.083 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -183,13 +185,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.521      1 -total
- 72.72%    6.924      1 Template:Manual:TOC
- 52.34%    4.983      1 Manual:Summary/cs
- 23.16%    2.205      2 Template:Docnav
+100.00%   13.018      1 -total
+ 76.99%   10.022      1 Template:Manual:TOC
+ 63.62%    8.282      1 Manual:Summary/cs
+ 17.16%    2.234      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021611 and revision id 1736918. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021656 and revision id 1736920. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
