--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -130,8 +130,8 @@
 </p>
 <h4><span id="Kategorie_zobrazen.C3.AD.2C_karta_Navigace"></span><span class="mw-headline" id="Kategorie_zobrazen&iacute;,_karta_Navigace">Kategorie zobrazen&iacute;, karta Navigace</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_DisplayNav.png&amp;filetimestamp=20240613205221&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_DisplayNav.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
-<ol><li><b>Zoom at cursor</b>: When enabled, zoom actions center on the mouse cursor. If disabled, zoom focuses on the center of the view.</li>
-<li><b>Invert zoom</b>: This option reverses the zoom direction in relation to mouse movement.</li></ol>
+<ol><li><b>P&#345;ibl&iacute;&#382;en&iacute; ke kurzoru</b>: Pokud je tato funkce povolena, akce p&#345;ibl&iacute;&#382;en&iacute; se soust&#345;ed&iacute; na kurzor my&scaron;i. Pokud je zak&aacute;z&aacute;na, p&#345;ibl&iacute;&#382;en&iacute; se soust&#345;ed&iacute; na st&#345;ed zobrazen&iacute;.</li>
+<li><b>Obr&aacute;tit p&#345;ibl&iacute;&#382;en&iacute;</b>: Tato mo&#382;nost obr&aacute;t&iacute; sm&#283;r p&#345;ibl&iacute;&#382;en&iacute; v z&aacute;vislosti na pohybu my&scaron;i.</li></ol>
 <h4><span class="mw-headline" id="Workbenches_tab">Workbenches tab</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_WBMenu.png&amp;filetimestamp=20240613205416&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_WBMenu.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <p>Although FreeCAD typically opens to the start page, this setting lets you bypass it. You can start directly in your preferred workbench. Additionally, you can customize which workbenches are displayed in the selector menu.
@@ -169,12 +169,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112021656
+Cached time: 20260112021847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.135 seconds
+CPU time usage: 0.093 seconds
+Real time usage: 0.140 seconds
 Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -185,13 +185,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.018      1 -total
- 76.99%   10.022      1 Template:Manual:TOC
- 63.62%    8.282      1 Manual:Summary/cs
- 17.16%    2.234      2 Template:Docnav
+100.00%   10.017      1 -total
+ 74.10%    7.423      1 Template:Manual:TOC
+ 53.06%    5.315      1 Manual:Summary/cs
+ 20.75%    2.079      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021656 and revision id 1736920. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021847 and revision id 1736923. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
