--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -132,7 +132,9 @@
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_DisplayNav.png&amp;filetimestamp=20240613205221&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_DisplayNav.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <ol><li><b>P&#345;ibl&iacute;&#382;en&iacute; ke kurzoru</b>: Pokud je tato funkce povolena, akce p&#345;ibl&iacute;&#382;en&iacute; se soust&#345;ed&iacute; na kurzor my&scaron;i. Pokud je zak&aacute;z&aacute;na, p&#345;ibl&iacute;&#382;en&iacute; se soust&#345;ed&iacute; na st&#345;ed zobrazen&iacute;.</li>
 <li><b>Obr&aacute;tit p&#345;ibl&iacute;&#382;en&iacute;</b>: Tato mo&#382;nost obr&aacute;t&iacute; sm&#283;r p&#345;ibl&iacute;&#382;en&iacute; v z&aacute;vislosti na pohybu my&scaron;i.</li></ol>
-<h4><span class="mw-headline" id="Workbenches_tab">Workbenches tab</span></h4>
+<p><span id="Workbenches_tab"></span>
+</p>
+<h4><span id="Karta_Pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Karta_Pracovn&iacute;_plochy">Karta Pracovn&iacute; plochy</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_WBMenu.png&amp;filetimestamp=20240613205416&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_WBMenu.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <p>Although FreeCAD typically opens to the start page, this setting lets you bypass it. You can start directly in your preferred workbench. Additionally, you can customize which workbenches are displayed in the selector menu.
 </p>
@@ -169,13 +171,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112021847
+Cached time: 20260112021937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.140 seconds
-Preprocessor visited node count: 132/1000000
+CPU time usage: 0.084 seconds
+Real time usage: 0.122 seconds
+Preprocessor visited node count: 133/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -185,13 +187,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.017      1 -total
- 74.10%    7.423      1 Template:Manual:TOC
- 53.06%    5.315      1 Manual:Summary/cs
- 20.75%    2.079      2 Template:Docnav
+100.00%    9.815      1 -total
+ 76.30%    7.489      1 Template:Manual:TOC
+ 59.99%    5.888      1 Manual:Summary/cs
+ 19.64%    1.928      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021847 and revision id 1736923. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021937 and revision id 1736925. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
