--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -80,7 +80,7 @@
 <p>FreeCAD vyu&#382;&iacute;v&aacute; syst&eacute;m nazvan&yacute; "Workbench" (pracovn&iacute; plocha), kter&yacute; je podobn&yacute; koncep&#269;n&iacute;m r&aacute;mc&#367;m pou&#382;&iacute;van&yacute;m v pokro&#269;il&eacute;m n&aacute;vrhov&eacute;m softwaru, jako je Revit nebo CATIA. My&scaron;lenka pracovn&iacute; plochy je analogick&aacute; se specializovan&yacute;mi stanicemi ve v&#283;deck&eacute; laborato&#345;i, kde jsou r&#367;zn&eacute; pracovn&iacute; stanice vybaveny pro r&#367;zn&eacute; typy experiment&#367;. V laborato&#345;i m&#367;&#382;ete m&iacute;t jednu oblast v&#283;novanou chemii, druhou biologii a t&#345;et&iacute; fyzice, p&#345;i&#269;em&#382; ka&#382;d&aacute; z nich je vybavena specifick&yacute;mi n&aacute;stroji pot&#345;ebn&yacute;mi pro dan&eacute; obory.
 </p><p>V kontextu FreeCADu je ka&#382;d&eacute; pracovn&iacute; prost&#345;ed&iacute; p&#345;izp&#367;sobeno konkr&eacute;tn&iacute;mu typu &uacute;kolu a organizuje v&scaron;echny n&aacute;stroje pot&#345;ebn&eacute; pro danou &#269;innost v jednom rozhran&iacute;. P&#345;i p&#345;ep&iacute;n&aacute;n&iacute; mezi pracovn&iacute;mi prost&#345;ed&iacute;mi se sada n&aacute;stroj&#367; a ovl&aacute;dac&iacute;ch prvk&#367; viditeln&yacute;ch v u&#382;ivatelsk&eacute;m rozhran&iacute; p&#345;izp&#367;sob&iacute; tak, aby odr&aacute;&#382;ela pot&#345;eby vybran&eacute;ho &uacute;kolu, i kdy&#382; se skute&#269;n&yacute; obsah projektu nebo "sc&eacute;na", na kter&eacute; pracujete, nem&#283;n&iacute;. To umo&#382;&#328;uje plynul&eacute; p&#345;echody v pracovn&iacute;m postupu, jako je nap&#345;&iacute;klad zah&aacute;jen&iacute; n&aacute;vrhu pomoc&iacute; z&aacute;kladn&iacute;ch 2D tvar&#367; v pracovn&iacute;m prost&#345;ed&iacute; Draft a n&aacute;sledn&eacute; rozpracov&aacute;n&iacute; t&#283;chto n&aacute;vrh&#367; pomoc&iacute; pokro&#269;il&yacute;ch modelovac&iacute;ch n&aacute;stroj&#367; v pracovn&iacute;m prost&#345;ed&iacute; Part.
 </p><p>Term&iacute;ny "Workbench" a "Module" se n&#283;kdy pou&#382;&iacute;vaj&iacute; zam&#283;niteln&#283;, ale ve FreeCADu maj&iacute; odli&scaron;n&yacute; v&yacute;znam. Modul je jak&eacute;koli roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; p&#345;id&aacute;v&aacute; funkcionalitu do FreeCADu, zat&iacute;mco Workbench je specifick&yacute; druh modulu vybaven&yacute; vlastn&iacute;mi komponentami u&#382;ivatelsk&eacute;ho rozhran&iacute;, jako jsou panely n&aacute;stroj&#367; a menu, ur&#269;en&eacute; k usnadn&#283;n&iacute; specifick&yacute;ch typ&#367; &uacute;kol&#367;. Ka&#382;d&yacute; Workbench je tedy modul, ale ne ka&#382;d&yacute; modul je Workbench.
-</p><p>The most important control of the FreeCAD interface is the Workbench selector, which you use to switch from one Workbench to the other:
+</p><p>Nejd&#367;le&#382;it&#283;j&scaron;&iacute;m ovl&aacute;dac&iacute;m prvkem rozhran&iacute; FreeCADu je voli&#269; pracovn&iacute;ho prost&#345;ed&iacute;, kter&yacute; slou&#382;&iacute; k p&#345;ep&iacute;n&aacute;n&iacute; mezi jednotliv&yacute;mi pracovn&iacute;mi prost&#345;ed&iacute;mi:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_WB.png&amp;filetimestamp=20240613200530&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_WB.png" decoding="async" width="1847" height="1054" class="mw-file-element" data-file-width="1847" data-file-height="1054"></a></span>
 </p><p>Workbenches often confuse new users, since it's not always easy to know in which Workbench to look for a specific tool. But they are quick to learn, and after a short while, they will feel natural. New users quickly realize that Workbenches are a convenient way to organize the multitude of tools FreeCAD has to offer. In addition, Workbenches are also fully customizable.
 </p>
@@ -150,12 +150,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112023953
+Cached time: 20260112024008
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.173 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.184 seconds
 Preprocessor visited node count: 200/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -166,16 +166,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.649      1 -total
- 47.36%    6.938      1 Template:Manual:TOC
- 36.31%    5.319      1 Manual:Summary/cs
- 13.48%    1.974      2 Template:Docnav
- 12.22%    1.790      3 Template:Version
- 10.98%    1.608      2 Template:VersionMinus
-  9.52%    1.395      2 Template:MenuCommand
+100.00%   15.145      1 -total
+ 51.28%    7.767      1 Template:Manual:TOC
+ 38.03%    5.760      1 Manual:Summary/cs
+ 16.26%    2.463      2 Template:Docnav
+ 10.48%    1.587      2 Template:VersionMinus
+  8.56%    1.296      2 Template:MenuCommand
+  8.35%    1.265      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023953 and revision id 1736970. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024008 and revision id 1736972. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
