--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -86,7 +86,7 @@
 </p><p><span id="Enabled_workbenches"></span>
 </p>
 <h4><span id="Povolen.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Povolen&eacute;_pracovn&iacute;_plochy">Povolen&eacute; pracovn&iacute; plochy</span></h4>
-<p>The following workbenches are enabled by default:
+<p>N&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; povoleny:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> for working with architectural elements and creating <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> models. It combines the Arch Workbench and the formerly external BIM Workbench available in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
@@ -151,12 +151,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112024052
+Cached time: 20260112024107
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.149 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -167,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.681      1 -total
- 59.20%    9.876      1 Template:Manual:TOC
- 44.83%    7.478      1 Manual:Summary/cs
- 13.53%    2.256      2 Template:Docnav
-  8.61%    1.436      3 Template:Version
-  7.07%    1.179      2 Template:VersionMinus
-  6.75%    1.126      2 Template:MenuCommand
+100.00%   13.823      1 -total
+ 55.29%    7.642      1 Template:Manual:TOC
+ 38.65%    5.342      1 Manual:Summary/cs
+ 15.48%    2.140      2 Template:Docnav
+  8.78%    1.213      2 Template:VersionMinus
+  8.01%    1.108      3 Template:Version
+  7.33%    1.013      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024052 and revision id 1736976. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024107 and revision id 1736978. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
